--- a/quiz.html
+++ b/quiz.html
@@ -279,6 +279,6 @@ function comment() {
     comment.textContent = "Full marks, congratulations!";
 }
 }
-showscore.onclick = showScore
+button10.onclick = showScore
 showscore.onclick = comment
 </script>
