--- a/quiz.html
+++ b/quiz.html
@@ -246,9 +246,7 @@ function inputAction10() {
   button10.onclick = clickAction10
 
 </script>
-<p><button id="showscore">Show Score</button></p>
-<h2 class="score4">Your score was: </h2><h2 class="blank" id="score3">...</h2>
-<p><button id="showcomment">Show Comment</button></p>
+<h2 class="score4">Your score was: </h2><h2 class="score" id="score3">...</h2>
 <h1 id="comment"></h1>
 <script>
 function showScore() {
