--- a/quiz.html
+++ b/quiz.html
@@ -246,7 +246,7 @@ function inputAction10() {
   button10.onclick = clickAction10
 
 </script>
-<h2 class="score4">Your score was: </h2><h2 class="score" id="score3">...</h2>
+<h2 class="score4">Your score was: <span class="score" id="score3">...</span></h2>
 <h1 id="comment"></h1>
 <script>
 function showScore() {
