--- a/quiz.html
+++ b/quiz.html
@@ -252,27 +252,27 @@ function inputAction10() {
 <script>
 function Comment3() {
   comment.textContent = "ok"
-  if (score5.textContent == "0") {
+  if (score5.value == "0") {
     comment.textContent = "How did you get them all wrong?";
-} else if (score5.textContent == "1") {
+} else if (score5.value == "1") {
     comment.textContent = "I mean... at least you got one right...";
-} else if (score5.textContent == "2") {
+} else if (score5.value == "2") {
     comment.textContent = "2 out of 10... I'm disgusted";
-} else if (score5.textContent == "3") {
+} else if (score5.value == "3") {
     comment.textContent = "Not very impressive my friend";
-} else if (score5.textContent == "4") {
+} else if (score5.value == "4") {
     comment.textContent = "This is not a good score, you truly are a silly billy";
-} else if (score5.textContent == "5") {
+} else if (score5.value == "5") {
     comment.textContent = "Only half correct... I'm sure you'll do better next time";
-} else if (score5.textContent == "6") {
+} else if (score5.value == "6") {
     comment.textContent = "I hope you aren't too pleased with that";
-} else if (score5.textContent == "7") {
+} else if (score5.value == "7") {
     comment.textContent = "Well I suppose you got most of them correct";
-} else if (score5.textContent == "8") {
+} else if (score5.value == "8") {
     comment.textContent = "Not too shabby";
-} else if (score5.textContent == "9") {
+} else if (score5.value == "9") {
     comment.textContent = "So close, you must be gutted";
-} else if (score5.textContent == "10") {
+} else if (score5.value == "10") {
     comment.textContent = "Full marks, congratulations!";
 }
 }
