--- a/quiz.html
+++ b/quiz.html
@@ -248,7 +248,7 @@ function inputAction10() {
 </script>
 <h2 class="score4">Your score was: <span class="score" id="score3">...</span></h2>
 <p><button id="showcomment">Show Comment</button></p>
-<h1 id="comment"></h1>
+<h1 id="comment">...</h1>
 <script>
 function Comment3() {
   comment.textContent = "ok"
@@ -276,6 +276,5 @@ function Comment3() {
     comment.textContent = "Full marks, congratulations!";
 }
 }
-showscore.onclick = showScore
 showcomment.onclick = Comment3
 </script>
