--- a/quiz.html
+++ b/quiz.html
@@ -252,9 +252,9 @@ function inputAction10() {
 <script>
 function Comment3() {
   comment.textContent = "ok"
-  if (score5.value == "0") {
+  if (score5.textContent == "0") {
     comment.textContent = "How did you get them all wrong?";
-} else if (score5.value == "1") {
+} else if (score5.textContent == "1") {
     comment.textContent = "I mean... at least you got one right...";
 } else if (score5.value == "2") {
     comment.textContent = "2 out of 10... I'm disgusted";
