--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="javier.css">
 <h1>Profile Page</h1>
+<div class="body">
 <p>
 Hi my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
 </p>
@@ -11,3 +12,4 @@ Hi my name is Javier, I am studying computer science at school and am practicing
 <li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
 </ul>
 </p>
+</div>
