--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@ Hi my name is Javier, I am studying computer science at school and am practicing
 <h3>Here are some links to other websites I have created:</h3>
 <p>
 <ul>
+</div>
 <li><a href="JavierRT7.github.io/poem.html">My poem page</a></li>
 <li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
+<div class="body">
 </ul>
 </p>
 </div>
