--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@ Hi my name is Javier, I am studying computer science at school and am practicing
 </p>
 <h3>Here are some links to other websites I have created:</h3>
 <p>
-<ul>
-<li><a href="JavierRT7.github.io/poem.html">My poem page</a></li>
-<li><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></li>
-</ul>
+<p class="list"><a href="JavierRT7.github.io/poem.html">My poem page</p></li>
+<p class="list"><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></p>
 </p>
 </div>
