--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <link rel="stylesheet" href="javier.css">
 <h1>Profile Page</h1>
 <div class="body">
@@ -11,3 +12,4 @@ Hi my name is Javier, I am studying computer science at school and am practicing
 <p class="list"><a href="JavierRT7.github.io/quiz.html">A quiz for you to try out</a></p>
 </p>
 </div>
+</html>
