--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Profile Page</h1>
 <div class="body">
 <p>
-Hi my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
+Hello my name is Javier, I am studying computer science at school and am practicing my HTML, CSS and JavaScript.
 </p>
 <h3>Here are some links to other websites I have created:</h3>
 <p>
